--- a/3dmspider/Dockerfile
+++ b/3dmspider/Dockerfile
@@ -3,8 +3,7 @@ FROM python:3.6
 WORKDIR /usr/src/app
 
 COPY requirements.txt ./
+COPY wait-for-it.sh /usr/local/bin/
 RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . .
-
-CMD [ "python", "RunSpider.py" ]
